Fix z-index issue with previous/next/zoom zones

--- a/web/less/frontend/modules/collection.less
+++ b/web/less/frontend/modules/collection.less
@@ -240,11 +240,10 @@
   .zoom-zone {
     position: absolute;
     display: block;
-    .size(100%, 70%);
+    .square(100%);
     top: 0;
-    left: 15%;
-    z-index: 105;
-    z-index: 200;
+    left: 0;
+    z-index: 104;
     .opacity(0);
 
     .picture-zoom {
@@ -273,6 +272,7 @@
     }
   }
 }
+
 
 .lt-ie10 .main-collectible-container {
   .prev-zone, .next-zone, .zoom-zone {
